--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   carousel_slider: ^4.2.1
   dots_indicator: ^2.1.0
   cached_network_image: ^3.3.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
