--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   dots_indicator: ^2.1.0
   cached_network_image: ^3.3.1
   flutter_rating_bar: ^4.0.1
+  retrofit: ^4.1.0
+  logger: ^2.1.0
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +56,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  retrofit_generator: ^8.1.0
+  build_runner: ^2.4.8
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
