add getX and test reactive programming

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,10 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_rating_bar: ^4.0.1
   retrofit: ^4.1.0
+  dio: ^5.4.1
   logger: ^2.1.0
   json_annotation: ^4.8.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
