--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.movieapp_clean_arch">
+
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    
    <application
         android:label="movieapp_clean_arch"
         android:name="${applicationName}"
