--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   logger: ^2.1.0
   json_annotation: ^4.8.1
   get: ^4.6.6
-  chucker_flutter: ^1.6.3
+  chuck_interceptor: ^2.1.0
 
 dev_dependencies:
   flutter_test:
