--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   json_annotation: ^4.8.1
   get: ^4.6.6
   chuck_interceptor: ^2.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +62,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   retrofit_generator: ^8.1.0
+  hive_generator: ^2.0.1
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
 
