--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   chuck_interceptor: ^2.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  stream_transform: ^2.1.0
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
