--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   hive_flutter: ^1.1.0
   stream_transform: ^2.1.0
   pull_to_refresh: ^2.0.0
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
