--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_svg: ^2.0.9
   carousel_slider: ^5.0.0
   dots_indicator: ^2.1.0
-  cached_network_image: ^3.3.1
+  cached_network_image: ^3.4.1
   flutter_rating_bar: ^4.0.1
   retrofit: ^4.1.0
   dio: ^5.4.1
@@ -53,7 +53,8 @@ dependencies:
   stream_transform: ^2.1.0
   pull_to_refresh: ^2.0.0
   uuid: ^4.3.3
-
+  freezed_annotation:
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -68,7 +69,8 @@ dev_dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
-
+  freezed:
+  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
