--- a/.gitignore
+++ b/.gitignore
@@ -401,6 +401,7 @@ fastlane/test_output
 iOSInjectionProject/
 
 ### VisualStudioCode ###
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
