--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   dots_indicator: ^2.1.0
   cached_network_image: ^3.4.1
   flutter_rating_bar: ^4.0.1
-  retrofit: ^4.1.0
+  retrofit: ^4.4.1
   dio: ^5.4.1
   logger: ^2.1.0
   json_annotation: ^4.8.1
@@ -54,7 +54,9 @@ dependencies:
   pull_to_refresh: ^2.0.0
   uuid: ^4.3.3
   freezed_annotation:
-  
+  another_flutter_splash_screen: ^1.2.1
+  flutter_native_splash: ^2.4.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -65,12 +67,19 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  retrofit_generator: ^8.1.0
+  retrofit_generator: ^9.1.2
   hive_generator: ^2.0.1
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
   freezed:
-  
+
+flutter_native_splash:
+  color: "#42a5f5"
+  # background_image: "assets/background.png"
+  image: assets/images/img_dummy_payment.png
+  android_12:
+    image: assets/images/img_dummy_payment.png
+    
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
