--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,8 @@ dependencies:
   freezed_annotation:
   another_flutter_splash_screen: ^1.2.1
   flutter_native_splash: ^2.4.1
-
+  infinite_scroll_pagination: ^4.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
