--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   another_flutter_splash_screen: ^1.2.1
   flutter_native_splash: ^2.4.1
   infinite_scroll_pagination: ^4.0.0
+  flutter_staggered_grid_view: ^0.7.0
   
 dev_dependencies:
   flutter_test:
