--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_native_splash: ^2.4.1
   infinite_scroll_pagination: ^4.0.0
   flutter_staggered_grid_view: ^0.7.0
+  shared_preferences: ^2.3.2
   
 dev_dependencies:
   flutter_test:
