wip: dark mode theme

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   flutter_staggered_grid_view: ^0.7.0
   shared_preferences: ^2.3.2
+  provider: ^6.1.2
   
 dev_dependencies:
   flutter_test:
