--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.19.0
   go_router: ^14.2.7
-  intl: ^0.18.1
   dart_extensions: ^2.2.0
   flutter_svg: ^2.0.9
   carousel_slider: ^5.0.0
@@ -61,7 +60,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   shared_preferences: ^2.3.2
   provider: ^6.1.2
-  
+  easy_localization: ^3.0.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -98,6 +98,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/translations/
     - assets/images/
     - assets/icons/
 
@@ -149,3 +150,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  # generate localizaiton
+  # generate: true
