--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,6 @@ dependencies:
   logger: ^2.4.0
   dio: ^5.4.1
   json_annotation: ^4.8.1
-  get: ^4.6.6
   chuck_interceptor: ^2.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -59,9 +58,10 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   flutter_staggered_grid_view: ^0.7.0
   shared_preferences: ^2.3.2
-  provider: ^6.1.2
   easy_localization: ^3.0.7
   skeletonizer: ^1.4.2
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
   
 dev_dependencies:
   flutter_test:
@@ -77,6 +77,8 @@ dev_dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.12
   json_serializable: ^6.8.0
+  riverpod_generator: ^2.4.3
+  riverpod_lint: ^2.3.13
   freezed:
 
 flutter_native_splash:
